suppressing more warnings for no assigning of AUtowired fields